# juezGUAPA

./: .env  .gitignore  .gitmodules  README.md
backend/: .dockerignore  .gitignore  Cargo.toml  README.md  a  evaluator_amd64.sh  minideb_evaluator.sh  p  problems.csv  (+7 more)
backend/web_server/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  sqlx-data.json
backend/web_server/images/: bruh.jfif  index.ts
backend/web_server/migrations/: 2_users_table.sql  3_create_confirmation_token.sql
backend/web_server/migrations/2022-12-28-230609_create_users/: down.sql
backend/web_server/scripts/: init_db.sh
backend/web_server/src/: configuration.rs  consts.rs  database_connection.rs  email_client.rs  lib.rs  main.rs  queue_connection.rs  session.rs  startup.rs  telemetry.rs  utils.rs
backend/web_server/src/authentication/: password.rs
backend/web_server/src/domain/: email.rs  mod.rs  new_subscriber.rs  user.rs
backend/web_server/src/migrations/: 2_users_table.sql  3_create_confirmation_token.sql
backend/web_server/src/routes/: confirm.rs  health.rs  login.rs  mod.rs  signup.rs
backend/web_server/src/tests/: configuration.rs
backend/web_server/static/: 404.html  index.html  login.html  signup.html
backend/web_server/static/_next/static/Ta2x0JnOhyTDxHWqMW-iF/: _buildManifest.js
backend/web_server/static/_next/static/chunks/: 299-7baa1ea0c21af6cc.js  604-8faa894c29f1ec92.js  734-4e06b28f0329ea3c.js  main-bdd22333ab4b7d4e.js
backend/web_server/static/_next/static/chunks/pages/: _app-63775eab4d42052e.js  index-42149063522a18f7.js  login-c25ed092b4b77b14.js  signup-03e8bef4bd76d46b.js
backend/web_server/static/_next/static/chunks/pages/contest/[contest_id]/: concurso-d6b03b3ae63ea232.js  problems-77f561f01668cd83.js  scoreboard-5dc13addf0a1ec5b.js
backend/web_server/static/_next/static/css/: c75e991dc7df7180.css
backend/web_server/static/contest/[contest_id]/: concurso.html  problems.html  scoreboard.html
(+43 files in other folders)
