[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "web_server"

[dependencies]
dotenvy = "0.15.6"
lapin = "2.1.1"
rabbitmq-stream-client = "*"
serde_json = "1.0"
env_logger = "0.10.0"
async-global-executor = "2.3.1"
futures-lite = "1.12.0"
anyhow = "1.0.70"
axum-server = { version = "0.5.0", features = ["tokio-rustls"] }
futures = "0.3.28"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
axum-macros = "0.3.7"
tower-http = { version = "0.4.3", features = ["cors", "fs", "trace"] }
http = "0.2.9"
secrecy = { version = "0.8.0", features = ["serde"] }
argon2 = { version = "0.5.0", features = ["std"] }
axum_session = { version = "0.2.3", features = ["redis-db"] }
thiserror = "1.0.40"
rand = "0.8.5"
uuid = "1.3.4"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
reqwest = { version = "0.11.14", features = ["json"] }
lettre = { version = "0.10.4", features = ["tokio1-rustls-tls", "tokio1-native-tls"] }
async-redis-session = "0.2.2"
axum = { version = "0.6.16",features = ["tokio"] }
axum-sessions = "0.5.0"
async-session = "3.0.0"
redis = "0.23.1"
tokio = { version = "1",features = ["macros", "rt-multi-thread"]}
serde ={version = "1.0", features = ["derive"]}

config = { version = "0.13.3" }

# https://github.com/sfackler/rust-openssl/issues/603#issuecomment-822619837 
# without this feature cross compilation in Dockerfile is not possible
openssl = { version = "0.10.35", features = ["vendored"] }

[dependencies.sqlx]
version = "0.6.2"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline",
    "decimal",
    "json"
]
